--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@
   --font-primary: 'Raleway', sans-serif;
 }
 
-
 html {
   font-family: var(--font-primary);
 }
@@ -18,10 +17,12 @@ a {
   text-decoration: none;
 }
 
+/* For page navigations (top navigation) */
+
 .top-bar {
   background-color: var(--color-dark-grey);
-  position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 .nav-bar {
@@ -31,11 +32,18 @@ a {
   width: 100%;
 }
 
+.logo:hover svg path#moustache {
+  animation: swing 800ms ease-in-out forwards infinite;
+  transform-origin: 50% 75%;
+}
+
 .logo-text {
   color: var(--color-white);
   text-decoration: none;
   text-transform: uppercase;
 }
+
+/* For page navigations (bottom navigation) */
 
 .nav-bar svg,
 .nav-bar a {
@@ -53,4 +61,49 @@ a {
 .current svg {
   color: var(--color-dark-primary) !important;
   fill: var(--color-dark-primary) !important;
+}
+
+/* For page navigations (buttons) */
+
+/* For the beer page banner */
+
+.banner-img {
+  background: linear-gradient(rgba(20,20,20, .50), rgba(20,20,20, .75));
+}
+
+.banner-likes {
+  color: var(--color-white);
+}
+
+.banner-likes svg {
+  fill: var(--color-white);
+}
+
+.banner-class {
+  color: var(--color-white);
+}
+
+.banner-heading {
+  color: var(--color-light-primary);
+  text-transform: uppercase;
+}
+
+.active svg {
+  fill: var(--color-dark-primary);
+}
+
+@keyframes swing {
+
+  0% {
+    transform: rotate(15deg);
+  }
+
+  50% {
+    transform: rotate(-10deg);
+  }
+
+  100% {
+    transform: rotate(15deg);
+  }
+
 }
