--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -15,7 +15,7 @@
       <i class="icon i-32 thumbs-down">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-down"></use></svg>
       </i>
-      <p class="pad-t-1-2">+1762 likes</p>
+      <p class="pad-t-1-2">+{{include.likes}} likes</p>
     </div>
   </div>
 </section>
