Finish profile page
As well as add the button style

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,7 @@
   </div>
   <div class="banner-info">
     <div class="banner-text absolute pin-bottom-left gutter-1-2">
-      <p class="banner-class push-1-4 tera">{{include.class}}</p>
+      <p class="banner-class push-0 tera">{{include.class}}</p>
       <h1 class="banner-heading nina">{{include.heading}}</h1>
     </div>
     <div class="banner-likes absolute pin-top-right text-right pad-t gutter-1-2">
