--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -58,7 +58,7 @@ layout: default
       </a>
     </div>
     <div class="unit xs-1-3">
-      <a href="{{site.baseurl}}/" {% if page.url == '/' %} class="current" {% endif %}>
+      <a href="{{site.baseurl}}/" {% if page.url == '/brew/' %} class="current" {% endif %}>
         <i class="icon i-48">
           <svg class="island-1-2"><use xlink:href="{{site.baseurl}}/images/icons.svg#beer"></use></svg>
         </i>
