--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -88,6 +88,80 @@ a {
   color: var(--color-white);
 }
 
+/* For the beer profile page */
+
+.profile-heading {
+  color: var(--color-light-primary);
+  text-transform: uppercase;
+}
+
+.banner-edit {
+  color: var(--color-white);
+}
+
+.banner-edit svg {
+  cursor: pointer;
+  fill: var(--color-white);
+}
+
+.banner-edit svg:hover {
+  fill: var(--color-light-primary);
+}
+
+.banner-profile {
+  background: linear-gradient(rgba(20,20,20, .50), rgba(20,20,20, .75));
+}
+
+.profile-pic {
+  border: var(--color-light-primary) solid 10px;
+}
+
+h3 {
+  color: var(--color-light-primary);
+}
+
+.segmented-control {
+    display: table;
+    width: 50%;
+    margin: 2em 0;
+    padding: 0;
+}
+
+.segmented-control-item {
+    display: table-cell;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.segmented-control-input {
+    position: absolute;
+    visibility: hidden;
+}
+
+.segmented-control-label {
+    display: block;
+    margin: 0 -1px -1px 0;
+    padding: 1em 3em;
+    color: white;
+    background-color: var(--color-dark-grey);
+
+    border: 2px solid var(--color-light-primary);
+
+    text-align: center;
+
+    cursor: pointer;
+}
+
+.segmented-control-label:hover {
+    background: var(--color-primary);
+}
+
+.segmented-control-input:checked + .segmented-control-label {
+    background: var(--color-light-primary);
+    color: var(--color-dark-grey);
+}
+
 /* For the beer page banner */
 
 .banner-img {
@@ -242,6 +316,42 @@ g.bubble-group-fast {
 
   100% {
     transform: rotate(15deg);
+  }
+
+}
+
+@media only screen and (min-width: 15em) {
+
+  .profile-pic {
+    width: 11rem;
+  }
+
+  .profile-heading {
+    font-size: 160%;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  .profile-pic {
+    width: 13rem;
+  }
+
+  .profile-heading {
+    font-size: 250%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .profile-pic {
+    width: 15rem;
+  }
+
+  .profile-heading {
+    font-size: 300%;
   }
 
 }
