--- a/_includes/css/sign-in.css
+++ b/_includes/css/sign-in.css
@@ -1,9 +1,10 @@
 .login-section {
-  background: url("../images/login-background-2.jpg");
+  background: url("../images/login-background-3.jpeg");
   background-repeat: no-repeat;
-  background-size: 120vw 110vh;
+  background-position: center;
   height: 100vh;
   width: 100vw;
+  display: block;
 }
 
 label {
