--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -2,16 +2,9 @@
 layout: default
 ---
 
-<ul class="nav skip-links">
-  <li><a itemprop="url" href="{{site.baseurl}}/#main">Jump to Main Content</a></li>
-  <li><a itemprop="url" href="{{site.baseurl}}/#nav">Jump to Navigation</a></li>
-  <li><a itemprop="url" href="{{site.baseurl}}/{{page.skip-link-1}}">{{page.skip-link-title-1}}</a></li>
-  <li><a itemprop="url" href="{{site.baseurl}}/{{page.skip-link-2}}">{{page.skip-link-title-2}}</a></li>
-</ul>
-
 <div class="top-bar pad-t-1-2 pad-b-1-2">
   <div class="wrapper gutter-1-2">
-    <a itemprop="url" class="micro push-r logo w-1-2" href="{{site.baseurl}}/">
+    <a itemprop="url" class="micro push-r logo w-1-2" href="{{site.baseurl}}/brew">
       <i class="icon i-64">
         <svg id="brewski-logo" width="89.2" height="128.2" viewBox="0 0 89.2 128.2">
           <style>
