--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
   <title>{% if page.title %}{{page.title}} · {% endif %}Brewski</title>
   <meta name="description" content="{{page.meta}}">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#212121">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl}}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/favicon-16x16.png">
+  <link rel="manifest" href="{{site.baseurl}}/site.webmanifest">
+  <link rel="mask-icon" href="{{site.baseurl}}/safari-pinned-tab.svg" color="#212121">
   <meta name="msapplication-TileColor" content="#212121">
   <meta name="theme-color" content="#212121">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700" rel="stylesheet">
@@ -29,46 +29,21 @@
 </head>
 <body>
 
+  <ul class="skip-links">
+    <li><a itemprop="url" href="{{site.baseurl}}{% if page.og-url %}/{{page.og-url}}{% endif %}/#main">Jump to Main Content</a></li>
+    <li><a itemprop="url" href="{{site.baseurl}}{% if page.og-url %}/{{page.og-url}}{% endif %}/#nav">Jump to Navigation</a></li>
+    {% if page.skip-link-1 %}
+      <li><a itemprop="url" href="{{site.baseurl}}/{{page.og-url}}/#{{page.skip-link-1}}">{{page.skip-link-title-1}}</a></li>
+    {% endif %}
+    {% if page.skip-link-2 %}
+      <li><a itemprop="url" href="{{site.baseurl}}/{{page.og-url}}/#{{page.skip-link-2}}">{{page.skip-link-title-2}}</a></li>
+    {% endif %}
+  </ul>
+
   {{content}}
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-  <script>
-    $(".thumbs-up").click(function() {
-      $('.thumbs-up').toggleClass('active');
-      $('.thumbs-down').removeClass('active');
-    });
+  <script src="{{site.baseurl}}/js/main.js"></script>
 
-    $(".thumbs-down").click(function() {
-      $('.thumbs-down').toggleClass('active');
-      $('.thumbs-up').removeClass('active');
-    });
-  </script>
-
-  <script>
-    var brewing = $("svg.brewing > *");
-    var brew = $("#brewing");
-    var bgBeer = $("rect#rect-orange");
-    var beer = $("rect#rect-white-2");
-    var brewText = $("#brew-text");
-    var bubble = $(".bubble-group");
-
-    // Create the brewing animation
-    brewing.on("click", function() {
-      brew.addClass('brewing-scale-active');
-      bgBeer.addClass('brewing-background-active');
-      beer.addClass('brewing-background-2-active');
-      bubble.addClass('bubble-group-active');
-      brewText.text('Brewing…')
-    });
-  </script>
-
-  <script>
-    // Function to create the illusion of loading
-    function delay (URL) {
-      setTimeout( function() {
-        window.location = URL
-      }, 2500 );
-    }
-  </script>
 </body>
 </html>
