--- a/_includes/css/type.css
+++ b/_includes/css/type.css
@@ -169,6 +169,13 @@ caption {
   margin: 0 0 1.3rem;
 }
 
+.tena-beeer {
+  font-size: 3.6532rem;
+  line-height: 3.9rem;
+  letter-spacing: 5px;
+  color: #FFE082;
+}
+
 .tenamega {
   font-size: 3.6532rem;
   line-height: 4.875rem;
