Add a profile navigation log out
Split all the CSS into more managble files.

--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,11 @@
 {% include css/modules.css %}
 {% include css/grid.css %}
 {% include css/type.css %}
+{% include css/brewing-animation.css %}
 {% include css/sign-in.css %}
+{% include css/profile.css %}
+{% include css/beer-profile.css %}
+{% include css/maps.css %}
+{% include css/navigation.css %}
+{% include css/tabs.css %}
 {% include css/main.css %}
