--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -3,6 +3,7 @@
   --color-light-primary: #ffe082;
   --color-dark-primary: #ff8f00;
   --color-white: #ffffff;
+  --color-light-grey: #636363;
   --color-dark-grey: #303030;
   --color-black: #212121;
 
@@ -16,393 +17,4 @@ html {
 
 a {
   text-decoration: none;
-}
-
-/* For page navigations (top navigation) */
-
-.top-bar {
-  background-color: var(--color-black);
-  width: 100%;
-  z-index: 1000;
-}
-
-.nav-bar {
-  background-color: var(--color-black);
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-}
-
-.logo:hover svg path#moustache {
-  animation: swing 800ms ease-in-out forwards infinite;
-  transform-origin: 50% 75%;
-}
-
-.logo-text {
-  color: var(--color-white);
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-/* For page navigations (bottom navigation) */
-
-.nav-bar svg,
-.nav-bar a {
-  color: var(--color-white);
-  fill: var(--color-white);
-}
-
-.nav-bar a:hover svg,
-.nav-bar a:hover {
-  color: var(--color-dark-primary);
-  fill: var(--color-dark-primary);
-}
-
-.current,
-.current svg {
-  color: var(--color-dark-primary) !important;
-  fill: var(--color-dark-primary) !important;
-}
-
-/* For page navigations (buttons) */
-
-.btn {
-  border-radius: 0;
-  overflow: hidden;
-}
-
-.btn-ghost-brew {
-  border-style: solid;
-  background-size: 200% 200%;
-  background-image: linear-gradient(to top, #ff8f00 25%, #ffe082 25%, #ffe082 50%, #fff 50% );
-  border-color: var(--color-dark-primary);
-  color: var(--color-dark-primary);
-  transition: all 0.25s ease-in;
-}
-
-.btn-ghost-brew:hover {
-  border-color: var(--color-dark-primary);
-  background-color: var(--color-white);
-  background-image: linear-gradient(to top, #ff8f00 25%, #ffe082 25%, #ffe082 50%, #fff 50% );
-  background-position: 0 100%;
-  color: var(--color-white);
-}
-
-/* For the beer profile page */
-
-.info-section {
-  background-color: var(--color-dark-grey);
-}
-
-.profile-heading {
-  color: var(--color-light-primary);
-  text-transform: uppercase;
-}
-
-.banner-edit {
-  color: var(--color-white);
-}
-
-.banner-edit svg {
-  cursor: pointer;
-  fill: var(--color-white);
-}
-
-.banner-edit svg:hover {
-  fill: var(--color-light-primary);
-}
-
-.banner-profile {
-  background: linear-gradient(rgba(20,20,20, .50), rgba(20,20,20, .75));
-}
-
-.profile-pic {
-  border: var(--color-light-primary) solid 10px;
-}
-
-h3 {
-  color: var(--color-light-primary);
-}
-
-.segmented-control {
-  display: table;
-  width: 50%;
-  margin: 2em 0;
-  padding: 0;
-}
-
-.segmented-control-item {
-  display: table-cell;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.segmented-control-input {
-  position: absolute;
-  visibility: hidden;
-}
-
-.segmented-control-label {
-  display: block;
-  margin: 0 -1px -1px 0;
-  padding: 1em 3em;
-  color: white;
-  background-color: var(--color-dark-grey);
-
-  border: 2px solid var(--color-light-primary);
-
-  text-align: center;
-
-  cursor: pointer;
-}
-
-.segmented-control-label:hover {
-  background: var(--color-primary);
-}
-
-.segmented-control-input:checked + .segmented-control-label {
-  background: var(--color-light-primary);
-  color: var(--color-dark-grey);
-}
-
-/* For the maps page */
-
-.i4ewOd-pzNkMb-haAclf {
-  background-color: var(--color-primary) !important;;
-}
-
-/* For the beer page banner */
-
-.banner-img {
-  background: linear-gradient(rgba(20,20,20, .50), rgba(20,20,20, .75));
-  border-bottom: solid var(--color-light-primary) 1rem;
-}
-
-.banner-likes {
-  color: var(--color-white);
-}
-
-.banner-likes svg {
-  cursor: pointer;
-  fill: var(--color-white);
-}
-
-.banner-class {
-  color: var(--color-white);
-}
-
-.banner-heading {
-  color: var(--color-light-primary);
-  text-transform: uppercase;
-}
-
-.active svg {
-  fill: var(--color-dark-primary);
-}
-
-/* For the beer page content */
-
-.tag {
-  background-color: var(--color-light-primary);
-  border-radius: 5px;
-}
-
-.bio {
-  color: var(--color-white);
-}
-
-.info-icons svg {
-  fill: var(--color-white);
-}
-
-.info-icons {
-  color: var(--color-white);
-}
-
-.taste,
-.percent,
-.barley,
-.hops {
-  margin-right: 3rem;
-}
-
-/* For the brewing animation */
-.brew-section h1 {
-  color: var(--color-white);
-}
-
-.brew-section {
-  background-color: var(--color-dark-grey);
-}
-
-svg#brewing {
-  cursor: pointer;
-  transition: all .25s linear;
-  transform: scale(1);
-}
-
-.brewing-scale-active {
-  transform: scale(1.08) !important;;
-  transform-origin: 35% 50% !important;;
-}
-
-.brew-section svg rect#rect-orange {
-  transition: all 1s linear;
-  transform: translate(87px, 379px);
-}
-
-.brewing-background-active {
-  transform: translate(87px, 185px) !important;
-  transition-delay: .5s !important;;
-}
-
-.brew-section svg rect#rect-white-2 {
-  transition: all 1s linear;
-  transform: translate(87px, 379px);
-}
-
-.brewing-background-2-active {
-  transform: translate(87px, 185px) !important;
-  transition-delay: .5s !important;
-}
-
-g.bubble-group-slow {
-  transition: all 4s linear;
-  transform: translateY(150px);
-}
-
-g.bubble-group-med {
-  transition: all 2.5s linear;
-  transform: translateY(150px);
-}
-
-g.bubble-group-fast {
-  transition: all 1.5s linear;
-  transform: translateY(150px);
-}
-
-.bubble-group-active {
-  transform: translateY(-100px) !important;
-  transition-delay: .5s !important;
-}
-
-/* .brewing-scale {
-  cursor: pointer;
-  transition: all .25s linear;
-  transform: scale(1);
-}
-
-.brewing-scale-active {
-  transform: scale(1.08);
-  transform-origin: 35% 50%;
-}
-
-.brewing-background {
-  transition: all 1s linear;
-  transition-delay: .50s;
-  transform: translate(87px, 379px);
-}
-
-.brewing-background-active {
-  transform: translate(87px, 185px);
-}
-
-.brewing-background-2 {
-  transition: all 1s linear;
-  transition-delay: .50s;
-  transform: translate(87px, 379px);
-}
-
-.brewing-background-2-active {
-  transform: translate(87px, 185px);
-} */
-
-/* Tabs CSS */
-.tab {
-  overflow: hidden;
-  background-color: var(--color-black);
-}
-
-.tab button {
-  background-color: var(--color-black);
-  border: none;
-  float: center;
-  border-bottom: 2px solid var(--color-black);
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-.tab button.active,
-.tab button:hover {
-  color: var(--color-dark-primary);
-  border-bottom: 2px solid var(--color-dark-primary);
-}
-
-.tabcontent {
-  display: none;
-  animation: fading 1s linear;
-}
-
-.orange {
-  color: var(--color-primary);
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-@keyframes swing {
-
-  0% {
-    transform: rotate(15deg);
-  }
-
-  50% {
-    transform: rotate(-10deg);
-  }
-
-  100% {
-    transform: rotate(15deg);
-  }
-
-}
-
-@media only screen and (min-width: 15em) {
-
-  .profile-pic {
-    width: 11rem;
-  }
-
-  .profile-heading {
-    font-size: 160%;
-  }
-
-}
-
-@media only screen and (min-width: 38em) {
-
-  .profile-pic {
-    width: 13rem;
-  }
-
-  .profile-heading {
-    font-size: 250%;
-  }
-
-}
-
-@media only screen and (min-width: 60em) {
-
-  .profile-pic {
-    width: 15rem;
-  }
-
-  .profile-heading {
-    font-size: 300%;
-  }
-
 }
