--- a/_includes/css/sign-in.css
+++ b/_includes/css/sign-in.css
@@ -1,40 +1,19 @@
-.login-section {
-  background: url("../images/login-background-3.jpeg");
+.signin-section {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 15%, rgba(33, 33, 33, 1) 100%), url("../images/login-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   height: 100vh;
   width: 100vw;
-  display: block;
 }
 
 label {
   background-color: gray;
-}
-
-.black {
   background-color: #1e1e1e;
 }
 
 input {
+  background-color: #1e1e1e;
   border-color: #1e1e1e;
-}
-
-.sign-in {
   color: var(--color-primary);
-}
-
-.btn {
-  border-radius: 0;
-  overflow: hidden;
-}
-
-.btn-ghost {
-  background-color: transparent;
-  border-color: var(--color-primary);
-}
-
-.btn-ghost:hover {
-  background-color: var(--color-primary);
-  border-color: var(--color-primary);
-  color: var(--color-white);
 }
