Added alt to images and focus styles
added the focus styles and alt tags on css

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -49,7 +49,8 @@ a {
   transition: all .25s linear;
 }
 
-#brewed a:hover {
+#brewed a:hover,
+#brewed a:focus {
   background-color: var(--color-black);
 }
 
