--- a/_includes/css/profile.css
+++ b/_includes/css/profile.css
@@ -18,7 +18,8 @@
   fill: var(--color-white);
 }
 
-.banner-edit svg:hover {
+.banner-edit svg:hover,
+.banner-edit svg:focus {
   fill: var(--color-light-primary);
 }
 
@@ -63,7 +64,8 @@ h3 {
   cursor: pointer;
 }
 
-.segmented-control-label:hover {
+.segmented-control-label:hover,
+.segmented-control-label:focus {
   background: var(--color-primary);
 }
 
