--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -80,7 +80,7 @@ layout: default
       </a>
     </div>
     <div class="unit xs-1-3">
-      <a itemprop="url" href="{{site.baseurl}}/favourites" {% if page.url == '/recent/' %} class="current" {% endif %}>
+      <a itemprop="url" href="{{site.baseurl}}/favourites" {% if page.url == '/favorites/' %} class="current" {% endif %}>
         <i class="icon i-48">
           <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
         </i>
